Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18382

Cannot build cmake project anymore

XMLWordPrintable

      Please open the attached project in QtC with the following configuration:

      • CMake 3.6 (ie no servermode) with autorun enabled, but I do not think that will matter
      • The rest should not matter

      Configuring the project for the first time is properly done in /tmp:

      Running "/home/florian/sources/cmake-3.6.3-Linux-x86_64/bin/cmake /home/florian/sources/cmake-3.6.3-Linux-x86_64/tests '-GCodeBlocks - Unix Makefiles' -DCMAKE_BUILD_TYPE:STRING=Debug -DCMAKE_CXX_COMPILER:STRING=/usr/bin/clang++ -DCMAKE_C_COMPILER:STRING=/usr/bin/clang '-DCMAKE_PREFIX_PATH:STRING=%{Qt:QT_INSTALL_PREFIX}' -DQT_QMAKE_EXECUTABLE:STRING=" in /tmp/QtCreator-JxNRco/qtc-cmake-XXqpZi0O.
      
      -- The C compiler identification is Clang 3.8.1
      
      -- The CXX compiler identification is Clang 3.8.1
      
      -- Check for working C compiler: /usr/bin/clang
      
      -- Check for working C compiler: /usr/bin/clang -- works
      
      -- Detecting C compiler ABI info
      
      -- Detecting C compiler ABI info - done
      
      -- Detecting C compile features
      
      -- Detecting C compile features - done
      
      -- Check for working CXX compiler: /usr/bin/clang++
      
      -- Check for working CXX compiler: /usr/bin/clang++ -- works
      
      -- Detecting CXX compiler ABI info
      
      -- Detecting CXX compiler ABI info - done
      
      -- Detecting CXX compile features
      
      -- Detecting CXX compile features - done
      
      -- Configuring done
      
      -- Generating done
      
      -- Build files have been written to: /tmp/QtCreator-JxNRco/qtc-cmake-XXqpZi0O
      
      CMake Warning:
      
      Manually-specified variables were not used by the project:
      
      
      
      
      QT_QMAKE_EXECUTABLE
      

      Hitting build results in:

      Running "/home/florian/sources/cmake-3.6.3-Linux-x86_64/bin/cmake /home/florian/sources/cmake-3.6.3-Linux-x86_64/tests '-GCodeBlocks - Unix Makefiles' -DCMAKE_BUILD_TYPE:STRING=Debug -DCMAKE_CXX_COMPILER:STRING=/usr/bin/clang++ -DCMAKE_C_COMPILER:STRING=/usr/bin/clang '-DCMAKE_PREFIX_PATH:STRING=%{Qt:QT_INSTALL_PREFIX}' -DQT_QMAKE_EXECUTABLE:STRING=" in /home/florian/sources/cmake-3.6.3-Linux-x86_64/build-tests-Clang-Debug.
      
      -- The C compiler identification is Clang 3.8.1
      
      -- The CXX compiler identification is Clang 3.8.1
      
      -- Check for working C compiler: /usr/bin/clang
      
      -- Check for working C compiler: /usr/bin/clang -- works
      
      -- Detecting C compiler ABI info
      
      -- Detecting C compiler ABI info - done
      
      -- Detecting C compile features
      
      -- Detecting C compile features - done
      
      -- Check for working CXX compiler: /usr/bin/clang++
      
      -- Check for working CXX compiler: /usr/bin/clang++ -- works
      
      -- Detecting CXX compiler ABI info
      
      -- Detecting CXX compiler ABI info - done
      
      -- Detecting CXX compile features
      
      -- Detecting CXX compile features - done
      
      -- Configuring done
      
      -- Generating done
      
      -- Build files have been written to: /home/florian/sources/cmake-3.6.3-Linux-x86_64/build-tests-Clang-Debug
      
      CMake Warning:
      
      Manually-specified variables were not used by the project:
      
      
      
      
      QT_QMAKE_EXECUTABLE
      

      which is correct too. The build itself fails with:

      12:46:21: Running steps for project Tutorial...
      
      12:46:21: Persisting CMake state...
      
      Error while building/deploying project Tutorial (kit: Clang)
      
      When executing step "CMake Build"
      
      12:46:21: Elapsed time: 00:00.
      

      The QtC logs for the relevant steps:

      inotify_add_watch("/tmp/QtCreator-JxNRco/qtc-cmake-XXqpZi0O/CMakeCache.txt") failed: "No such file or directory"
      inotify_add_watch("/tmp/QtCreator-JxNRco/qtc-cmake-XXqpZi0O/Tutorial.cbp") failed: "No such file or directory"
      qtc.cmakeprojectmanager.filetargetmapping: ###############
      qtc.cmakeprojectmanager.filetargetmapping: # Pre Dump    #
      qtc.cmakeprojectmanager.filetargetmapping: ###############
      qtc.cmakeprojectmanager.filetargetmapping: "all" "/home/florian/sources/cmake-3.6.3-Linux-x86_64/tests" () "" ()
      
      qtc.cmakeprojectmanager.filetargetmapping: "edit_cache" "/home/florian/sources/cmake-3.6.3-Linux-x86_64/tests" () "" ()
      
      qtc.cmakeprojectmanager.filetargetmapping: "rebuild_cache" "/home/florian/sources/cmake-3.6.3-Linux-x86_64/tests" () "" ()
      
      qtc.cmakeprojectmanager.filetargetmapping: "Tutorial" "/home/florian/sources/cmake-3.6.3-Linux-x86_64/tests" ("/usr/local/include", "/usr/lib/llvm-3.8/bin/../lib/clang/3.8.1/include", "/usr/include/x86_64-linux-gnu", "/usr/include", "/usr/bin/../lib/gcc/x86_64-linux-gnu/6.3.0/../../../../include/c++/6.3.0", "/usr/bin/../lib/gcc/x86_64-linux-gnu/6.3.0/../../../../include/x86_64-linux-gnu/c++/6.3.0", "/usr/bin/../lib/gcc/x86_64-linux-gnu/6.3.0/../../../../include/c++/6.3.0/backward") "" ()
      
      qtc.cmakeprojectmanager.filetargetmapping: ###############
      qtc.cmakeprojectmanager.filetargetmapping: # Sorting     #
      qtc.cmakeprojectmanager.filetargetmapping: ###############
      qtc.cmakeprojectmanager.filetargetmapping: "/home/florian/sources/cmake-3.6.3-Linux-x86_64/tests/tutorial.cxx"
      qtc.cmakeprojectmanager.filetargetmapping:   into "Tutorial" (target attribute)
      qtc.cmakeprojectmanager.filetargetmapping: ###############
      qtc.cmakeprojectmanager.filetargetmapping: # After Dump  #
      qtc.cmakeprojectmanager.filetargetmapping: ###############
      qtc.cmakeprojectmanager.filetargetmapping: "all" "/home/florian/sources/cmake-3.6.3-Linux-x86_64/tests" () "" ()
      
      qtc.cmakeprojectmanager.filetargetmapping: "edit_cache" "/home/florian/sources/cmake-3.6.3-Linux-x86_64/tests" () "" ()
      
      qtc.cmakeprojectmanager.filetargetmapping: "rebuild_cache" "/home/florian/sources/cmake-3.6.3-Linux-x86_64/tests" () "" ()
      
      qtc.cmakeprojectmanager.filetargetmapping: "Tutorial" "/home/florian/sources/cmake-3.6.3-Linux-x86_64/tests" ("/usr/local/include", "/usr/lib/llvm-3.8/bin/../lib/clang/3.8.1/include", "/usr/include/x86_64-linux-gnu", "/usr/include", "/usr/bin/../lib/gcc/x86_64-linux-gnu/6.3.0/../../../../include/c++/6.3.0", "/usr/bin/../lib/gcc/x86_64-linux-gnu/6.3.0/../../../../include/x86_64-linux-gnu/c++/6.3.0", "/usr/bin/../lib/gcc/x86_64-linux-gnu/6.3.0/../../../../include/c++/6.3.0/backward") "" ("/home/florian/sources/cmake-3.6.3-Linux-x86_64/tests/tutorial.cxx")
      
      inotify_add_watch("/tmp/QtCreator-JxNRco/qtc-cmake-XXqpZi0O/Tutorial.cbp") failed: "No such file or directory"
      inotify_add_watch("/tmp/QtCreator-JxNRco/qtc-cmake-XXqpZi0O/CMakeCache.txt") failed: "No such file or directory"
      qtc.autotest.testcodeparser: adding singleShot
      qtc.clangcodemodel.ipc: >>> RegisterProjectPartsForEditorMessage(ProjectPartContainer( Tutorial,</tmp/qtc-clangbackendipc-3nSrSQ/projectpartargs--iM8570>), )
      qtc.clangcodemodel.ipc: >>> RegisterProjectPartsForEditorMessage(ProjectPartContainer(,</tmp/qtc-clangbackendipc-3nSrSQ/projectpartargs--Nq8570>), )
      qtc.cpptools.sourceprocessor: Parsing: "/home/florian/sources/cmake-3.6.3-Linux-x86_64/tests/tutorial.cxx" contents: 425 bytes
      qtc.autotest.testcodeparser: setState( 0 ), currentState: 0
      clangbackend.stderr: qtc.clangbackend.timers: ClangCodeModelServer::registerProjectPartsForEditor needed 0 ms
      clangbackend.stderr: qtc.clangbackend.timers: ClangCodeModelServer::registerProjectPartsForEditor needed 0 ms
      
      qtc.autotest.testcodeparser: calling scanForTests (updateTestTree)
      qtc.autotest.testcodeparser: setting state to FullParse (scanForTests)
      qtc.autotest.testcodeparser: "12:46:24.334" StartParsing
      qtc.autotest.testcodeparser: setting state to Idle (onFinished, FullParse)
      qtc.autotest.testcodeparser: emitting parsingFinished (onFinished, FullParse, nothing postponed, parsing succeeded)
      qtc.autotest.testcodeparser: "12:46:24.335" ParsingFin
      
      

      If I restart QtC at this point I can compile just fine.

        1. tests.tar
          50 kB
          Florian Apolloner
        For Gerrit Dashboard: QTCREATORBUG-18382
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            apollo13 Florian Apolloner
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes